fixes: share button spacing and homepage spacing

--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,7 @@ a {
 .container-fluid.homepage .dropdown.select-city-form .btn.btn-primary,
 .survey {
   background-color: #e0ffff;
-  color: #b398bd;
+  color: #000000;
   border-color: #e0ffff;
 }
 
